Toevoegde klassen: CircusDieren, Dier, Trein en Wagon.
Bij Dier al een paar properties toegevoegd en ctor.
Bij CircusDieren ctor toegevoegd en beetje code voor het verzamelen van de dieren.

--- a/Circustrein/Circustrein.csproj
+++ b/Circustrein/Circustrein.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CircusDieren.cs" />
+    <Compile Include="Dier.cs" />
+    <Compile Include="Trein.cs" />
+    <Compile Include="Wagon.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,8 +73,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\AnimalModel.cs" />
-    <Compile Include="Models\WagonModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
