--- a/CircustreinTests/CircustreinTests.csproj
+++ b/CircustreinTests/CircustreinTests.csproj
@@ -56,8 +56,10 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="AnimalTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrainTests.cs" />
+    <Compile Include="WagonTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
